# chess

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  README.md  dodo.py  pyproject.toml
Docs/source/: chess_client.rst  chess_server.rst  clients_info.rst  figures.rst  index.rst  internationalization.rst  server_answer.rst
chess_gameplay/: chess_game.py
client/: pyproject.toml
client/src/: __init__.py  chess_client.py  chess_game.py  figures.py  internationalization.py  localization.py  server_answer.py
client/src/po/ru_RU.UTF-8/LC_MESSAGES/: msg.po
docs/source/: chess_game.rst  conf.py  dump_load.rst  game_history.rst  games.rst  index.rst  rules.rst  user_info.rst
docs/source/_static/: discription.html
server/: pyproject.toml
server/src/: __init__.py  chess_game.py  chess_server.py  clients_info.py  dump_load.py  game_history.py  games.py  user_info.py
tests/: test_client.py  test_dump_load.py  test_figures.py  test_game.py  test_server.py
