[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chess"
version = "2024.0.0"
dependencies = ["Sphinx", "build", "coverage", "doit", "flake8",
                "pydocstyle", "Babel", "setuptools>=61.0", "wheel",
                ]

requires-python = ">=3.10"
authors = [
  {name = "Andrey Ostroverkhov", email = "andrey26052001@gmain.com"},
  {name = "Mikhail Kurakin", email = "Potapter@gmain.com"},
]
maintainers = [
  {name = "Andrey Ostroverkhov", email = "andrey26052001@gmain.com"}
]
description = "Play chess with your friends"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["chess"]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
chess_client = "chess:client"
chess_server = "chess:server"

[project.urls]
repository = "https://github.com/OstroverkhovAndrey/chess"

[tool.setuptools.package-dir]                                                                                                            
chess = "./" 

[tool.setuptools.package-data]
chess = ["*/*/*/*/*.mo"]
