[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "client"
version = "2024.0.0"
dependencies = ["Sphinx", "build", "coverage", "doit", "flake8",
                "pydocstyle", "Babel", "setuptools>=61.0", "wheel",
                ]
scripts = {chess_client = "client:client"}

requires-python = ">=3.10"
authors = [
  {name = "Andrey Ostroverkhov", email = "andrey26052001@gmain.com"},
  {name = "Mikhail Kurakin", email = "Potapter@gmain.com"},
]
maintainers = [
  {name = "Andrey Ostroverkhov", email = "andrey26052001@gmain.com"}
]
description = "Play chess with your friends"
readme = "../README.md"
license = {file = "LICENSE.txt"}
keywords = ["chess"]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.urls]
repository = "https://github.com/OstroverkhovAndrey/chess"

[tool.setuptools.package-dir]                                                                                                            
client = "src/" 

[tool.setuptools.package-data]
client = ["*/*/*/*.mo"]
