[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "2024.0.0"
dependencies = ["Sphinx", "build", "coverage", "doit", "flake8",
                "pydocstyle", "Babel", "setuptools>=61.0", "wheel",
                ]
scripts = {aecho = "server:server"}

requires-python = ">=3.10"
authors = [
  {name = "Andrey Ostroverkhov", email = "andrey26052001@gmain.com"},
  {name = "Mikhail Kurakin", email = "Potapter@gmain.com"},
]
maintainers = [
  {name = "Andrey Ostroverkhov", email = "andrey26052001@gmain.com"}
]
description = "Play chess with your friends"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["chess"]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.urls]
repository = "https://github.com/OstroverkhovAndrey/chess"

[tool.setuptools.package-dir]                                                                                                            
server = "src/" 
